# InfinityLauncher

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  build.ps1  build.sh  installer.manifest  readme.md  resources.rc.in  setup_beta_env.sh  vcpkg.json
cmake/: key_loading.cmake  util.cmake
src/: main.cpp
src-bin2header/: main.cpp
src-rs/flatten-svg/: Cargo.toml
src-rs/flatten-svg/src/: main.rs
src-updater/: main.cpp  readme.md
src/Assets/Fonts/: IcontsFontAwesome5.h
src/Assets/Images/: backArrow.h  backIcon.h  downloadIcon.h  settingsIcon.h  test-tube.h
src/Backend/Application/: Application.cpp  Application.hpp
src/Backend/Buffer/: Buffer.hpp
src/Backend/Downloads/: Downloads.cpp  Downloads.hpp  readme.md
src/Backend/Encryption/: Encryption.cpp  Encryption.hpp
src/Backend/HWID/: Hwid.cpp  Hwid.hpp
src/Backend/Image/: Image.cpp  Image.hpp  SvgImage.cpp  SvgImage.hpp
src/Backend/Installer/: Installer.cpp  Installer.hpp
src/Backend/Layer/: Layer.hpp
src/Backend/Notifications/: Notifications.cpp  Notifications.hpp
src/Backend/Router/: Router.cpp  Router.hpp  readme.md
src/Backend/SystemTray/: SystemTray.cpp  SystemTray.hpp
src/Backend/TextureQueue/: TextureQueue.cpp  TextureQueue.hpp
src/Backend/UIHelpers/: UiHelpers.cpp  UiHelpers.hpp
src/Backend/Updater/: Updater.cpp  Updater.hpp
src/Backend/VulkanManager/: VulkanManager.cpp  VulkanManager.hpp
src/Backend/ZipExtractor/: ZipExtractor.cpp  ZipExtractor.hpp
src/Frontend/Background/: Background.cpp  Background.hpp  Meteors.cpp  Meteors.hpp
src/Frontend/ColorInterpolation/: ColorInterpolation.cpp  ColorInterpolation.hpp
src/Frontend/Markdown/: Markdown.cpp  Markdown.hpp
src/Frontend/Pages/Betas/: Betas.cpp  Betas.hpp
src/Frontend/Pages/Downloads/: Downloads.cpp  Downloads.hpp
src/Frontend/Pages/Home/: Home.cpp  Home.hpp
src/Frontend/Pages/Project/: Project.cpp  Project.hpp
src/Frontend/Pages/Settings/: Settings.cpp  Settings.hpp
src/Frontend/SVG/: SVGDrawing.hpp
src/Frontend/Theme/: Theme.cpp  Theme.hpp
src/Util/Easing/: Easing.hpp
src/Util/Error/: Error.hpp
src/Util/GroupUtil/: GroupUtil.hpp
src/Util/State/: GroupStateManager.hpp  RenderGroupData.hpp  State.hpp
